Removed overflow feature as increasing row's height when there is an overflow is resolved

--- a/src/main/resources/static/css/creditcard.css
+++ b/src/main/resources/static/css/creditcard.css
@@ -378,8 +378,3 @@ gap: 4px;
 width: 13%;
 background: #FFFFFF;
 }
-
-/* Change for increase on row's height for overflow */
-.body-description {
-	overflow: auto;
-}
